# kgf_stock

./: README.md  license.txt  pyproject.toml
kgf_stock/: hooks.py  modules.txt
kgf_stock/kgf_stock/doctype/kgf_stock_settings/: kgf_stock_settings.json  kgf_stock_settings.py
kgf_stock/kgf_stock/page/b2c_quote/: b2c_quote.js  b2c_quote.json
kgf_stock/stock/: api.py  reservation.py
