[project]
name = "kgf_stock"
authors = [{ name = "K Garden", email = "ai.developer@kgarden.local" }]
description = "Stock reservation on Sales Order, deduction on Delivery Note"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
erpnext = ">=15.0.0,<17.0.0"
